plugin_LTLIBRARIES = libgstktxparse.la 

libgstktxparse_la_SOURCES = gstktxparse.c   \
                               gstktxparse.h

libgstktxparse_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CFLAGS)
libgstktxparse_la_LIBADD = $(GST_PLUGINS_BASE_LIBS) $(GST_BASE_LIBS) $(GST_LIBS)
libgstktxparse_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
libgstktxparse_la_LIBTOOLFLAGS = $(GST_PLUGIN_LIBTOOLFLAGS)
